# HamachiRecruiter

./: .env-example  .gitignore  .pre-commit-config.yaml  README.md  improve  improvements.txt  pyproject.toml  requirements.txt
1_Search_for_repos/: search_for_repos.py
2_Extract_readmes/: extract_readme.py
3_Analyze_repos/: analyze_repo.py
3_Categorize_repos/: categorize_repo.py
4_Extract_commits/: extract_commits.py
5_Extract_contributors/: extract_contributors.py
6_Analyze_contributors/: analyze_contributors.py
7_Merge_contributors/: merge.py
7_Merge_contributors_and_repos/: merge_contributors_and_repos.py
8_Merge_contributors_with_repos/: merge.py
analyze_commits/: analyze.py
analyze_repo/: analyze.py
app/: package-lock.json
app/src/: App.tsx
app/src/api/: search.py
app/src/components/: DeveloperTable.tsx  SearchForm.tsx
app/src/types/: developer.ts
backend/: backend.py  search.py
candidate_analysis/: query.py
commit_extraction/: extractor.py  pyproject.toml
contributor_extraction/: extractor.py
contributor_merging/: merge.py
demo/: analyze_commits.py  get_profile_pics.ipynb
frontend/src/types/: developer.ts
hamachi_app/backend/: backend.py  query.py
hamachi_app/frontend/: index.html
hamachi_app/frontend/src/: App.tsx
hamachi_app/frontend/src/components/: DeveloperTable.tsx  SearchForm.tsx
hamachi_app/frontend/src/types/: developer.ts
readme_extractor/: extract_readme.py  extractor.py
repo_data/: .env-example  main.py  pyproject.toml  repos.ipynb
repo_search/: search.py  search_for_repos.py
