[project]
name = "hamachirecruiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "daft>=0.4.7",
    "gitpython>=3.1.44",
    "instructor>=1.7.4",
    "openai>=1.66.3",
    "pydantic>=2.10.6",
    "pygithub>=2.6.1",
]
